Contacts: follow default system font
Change-Id: I43c2ecc94a33d36147c01b884328a2cbd83de883

--- a/res/layout/quickcontact_title_placeholder.xml
+++ b/res/layout/quickcontact_title_placeholder.xml
@@ -24,7 +24,7 @@
         android:id="@+id/placeholder_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@android:style/TextAppearance.Material.Widget.ActionBar.Title" />
+        style="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Title" />
 
 </FrameLayout>
 
